<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:layout_centerInParent="true"
	android:isScrollContainer="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/menuButton"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/hello_misnap_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout android:id="@+id/dataResultLinearLayout"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <id.singd.android.mitek.TouchImageView
            android:id="@+id/result_screen_touchimageview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <ScrollView
            android:id="@+id/dataResultScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">

            <LinearLayout
                android:id="@+id/dataContentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/hello_misnap_result_code"/>
                <EditText
                    android:id="@+id/misnap_app_result_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/hello_misnap_warnings"/>
                <EditText
                    android:id="@+id/misnap_app_warnings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/hello_misnap_four_corners"/>
                <EditText
                    android:id="@+id/misnap_app_four_corners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/hello_misnap_mibi_data"/>
                <EditText
                    android:id="@+id/misnap_app_mibi_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
